# ckb-type-id

./: .gitignore  Cargo.toml  README.md
.github/workflows/: ci.yml
src/: lib.rs
test-lib/: Cargo.toml  README.md  capsule.toml
test-lib/contracts/type-id-test/: Cargo.toml
test-lib/contracts/type-id-test/src/: entry.rs  error.rs  main.rs  type_id.rs
test-lib/tests/src/: tests.rs
