[package]
name = "ckb-type-id"
version = "0.1.0-alpha.3"
authors = ["Nervos Dev <dev@nervos.org>"]
description = "ckb type id library."
edition = "2021"
license = "MIT"
readme = "README.md"
repository = "https://github.com/axonweb3/ckb-type-id"
exclude = ["/test-lib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ckb-std = "0.13"
blake2b-rs = "0.2.0"
molecule = { version = "0.7.3", default-features = false }
